{
  "version": 4,
  "terraform_version": "0.12.23",
  "serial": 79,
  "lineage": "7a8a437a-5e72-9d43-c326-bea812b508a5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my-instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b7937aeb16a7eb94",
            "arn": "arn:aws:ec2:eu-north-1:436768552864:instance/i-0f37af351307e9eba",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f37af351307e9eba",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "stockholm_key",
            "monitoring": false,
            "primary_network_interface_id": "eni-06676629614e08a3e",
            "private_dns": "ip-10-0-0-112.eu-north-1.compute.internal",
            "private_ip": "10.0.0.112",
            "public_dns": "ec2-13-48-190-213.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.48.190.213",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0be8ca87a4c6b9278",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00f7e88a842b7a566",
            "tags": {
              "Name": "myServer"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0149acdab92dc8eb9"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_ssh_http",
            "aws_subnet.mySubnet",
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myIGW",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-03349f4f93442eb64",
            "owner_id": "436768552864",
            "tags": {
              "Name": "myIGW"
            },
            "vpc_id": "vpc-068bd84d28466b2d9"
          },
          "dependencies": [
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "myRT",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0dc64cf44d24533ed",
            "owner_id": "436768552864",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03349f4f93442eb64",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "myRT"
            },
            "vpc_id": "vpc-068bd84d28466b2d9"
          },
          "dependencies": [
            "aws_internet_gateway.myIGW",
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "myRTassociation",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-001a72440f605eb25",
            "route_table_id": "rtb-0dc64cf44d24533ed",
            "subnet_id": "subnet-00f7e88a842b7a566"
          },
          "dependencies": [
            "aws_internet_gateway.myIGW",
            "aws_route_table.myRT",
            "aws_subnet.mySubnet",
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh_http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:436768552864:security-group/sg-0149acdab92dc8eb9",
            "description": "Allow SSH and HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0149acdab92dc8eb9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow flask app",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "allow_ssh_http",
            "name_prefix": null,
            "owner_id": "436768552864",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-068bd84d28466b2d9"
          },
          "dependencies": [
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mySubnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:436768552864:subnet/subnet-00f7e88a842b7a566",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-00f7e88a842b7a566",
            "map_public_ip_on_launch": false,
            "owner_id": "436768552864",
            "tags": {
              "Name": "mySubnet"
            },
            "vpc_id": "vpc-068bd84d28466b2d9"
          },
          "dependencies": [
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myVPC",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:436768552864:vpc/vpc-068bd84d28466b2d9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b81b7ca118709bd0",
            "default_route_table_id": "rtb-0c8b0f95dc12c9dc1",
            "default_security_group_id": "sg-06897c81f8c7f79af",
            "dhcp_options_id": "dopt-7284521b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-068bd84d28466b2d9",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c8b0f95dc12c9dc1",
            "owner_id": "436768552864",
            "tags": {
              "Name": "myVPC"
            }
          }
        }
      ]
    }
  ]
}